various heid task upgrades

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@ body > #root > div {
 .bold {
     font-weight: bold;
 }
+.underline {
+    text-decoration: underline;
+}
 .text-center {
     text-align: center;
 }
