--- a/src/App.css
+++ b/src/App.css
@@ -148,13 +148,10 @@ pre {
     background: url('/images/issues-bg.png'),
                 url('/images/game-icon.png'),
                 url('/images/self-icon.png'),
-                url('/images/protestor-frown.png'),
-                url('/images/arrow-blue.svg'),
-                url('/images/protestor-smile.png');
-    background-size: 10px auto, 10px auto, 10px auto, 10px auto, 10px auto, 10px auto;
-    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
-
-    
+                url('/images/protestor.png'),
+                url('/images/arrow-blue.svg');
+    background-size: 10px auto, 10px auto, 10px auto, 10px auto, 10px auto;
+    background-repeat: no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
 }
 
 #preloaded_images img {
