--- a/src/components/Survey/SurveySection2/SurveySection2.css
+++ b/src/components/Survey/SurveySection2/SurveySection2.css
@@ -37,27 +37,19 @@
 }
 
 
-
-
-
 .dropWrapper {
-    /* display: flex;
-    width: 100%;
-    height: 100%;
-    flex-flow: column wrap;
-    overflow-y: scroll; */
-
-
     left: 0;
     right: 0;
-    /* flex-flow: column wrap; */
     overflow-y: scroll;
     position: absolute;
     flex-direction: column;
     bottom: 0;
     top: 55px;
+    text-align: left;
 }
-
+.cat.most_important .dropWrapper {
+    text-align: center;
+}
 
 
 
@@ -74,22 +66,6 @@
 
 /* ISSUE CARDS */
 .issue-card.card {
-    /* display: inline-block;
-    flex-direction: column; */
-    /* justify-content: center;
-
-    margin: 0.5rem;
-    padding: 8px 45px 0px 15px;
-    width: 225px;
-    cursor: pointer;
-    
-    border: 1px solid darkgreen;
-    border-radius: 5px;
-    box-shadow: inset 3px 1px 2px rgba(25, 180, 25, 1), inset -3px -4px 2px rgba(0, 0, 0, .4);
-    max-height: 60px; */
-
-
-    justify-content: center;
     margin: 0.5rem;
     padding: 8px 45px 0px 15px;
     width: 225px;
@@ -98,12 +74,21 @@
     border-radius: 5px;
     box-shadow: inset 3px 1px 2px rgba(25, 180, 25, 1), inset -3px -4px 2px rgba(0, 0, 0, .4);
     height: 60px;
+    display: inline-block;
+    vertical-align: text-bottom;
+    text-align: center;
+    position: relative;
 }
 
 
 .dropWrapper .issue-card.card h5 {
     font-weight: 700;
     font-size: 0.9rem;
+    position: absolute;
+    top: 47%;
+    transform: translateY(-50%);
+    left: 10px;
+    right: 44px;
 }
 
 
@@ -120,19 +105,96 @@
 
 
 
+
+/* Thinking Figure */
+.surveySection.sec2-issue-categorize .figure_pondering {
+    left: 80px;
+}
+.surveySection.sec2-issue-categorize .figure_pondering img {
+    height: 130%;
+}
+
 /* TODO - NAME THIS - BUTTONS TEMP */
+.figureButton {
+    box-shadow: inset -2px -3px 5px #aaa;
+    font-size: 0.8rem;
+    cursor: pointer;
+    background: white;
+    height: 40px;
+    border-radius: 40px;
+    padding-left: 40px;
+    overflow: hidden;
+}
 .some-buttons {
     position: absolute;
     bottom: 0;
     left: 200px;
+    right: 0;
+    height: 150px;
 }
 
-.showInstructionsButton {
-    border-radius: 15px;
-    box-shadow: inset -2px -3px 5px #aaa;
-    font-size: 0.8rem;
-    cursor: pointer;
+.showInstructions {
+    position: absolute;
+    bottom: 205px;
+    left: 190px;
 }
+.goBack {
+    position: absolute;
+    bottom: 205px;
+    left: 15px;
+
+    left: 40px;
+    transition: left .25s ease;
+}
+.goBack:hover {
+    left: 15px;
+}
+
+.showInstructions .figureButton,
+.goBack .figureButton {
+    width: 40px;
+    transition: width .25s ease;
+}
+.showInstructions .figureButton:hover {
+    width: 160px;
+}
+.goBack .figureButton:hover {
+    width: 100px;
+}
+
+.showInstructions .btn_icon,
+.goBack .btn_icon {
+    height: 30px;
+    width: 30px;
+    background-image: url(/images/left_icon_blue.png);
+    background-size: 30px 30px;
+    background-repeat: no-repeat;
+    display: block;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+}
+
+.figureButton .left_icon_blue {
+    background-image: url(/images/left_icon_blue.png);
+    opacity: 0.6;
+}
+.figureButton .question_icon_blue {
+    background-image: url(/images/question_icon_blue.png);
+    opacity: 0.8;
+}
+.figureButton .button_text {
+    white-space: nowrap;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+/* .goBack button {
+    padding-left: 40px;
+    background-image: url('/images/left_icon_blue.png');
+} */
+
 .showInstructionsButton:hover {
     background: #eee;
 }
