--- a/src/components/ExperimentBlock/ExperimentBlock.css
+++ b/src/components/ExperimentBlock/ExperimentBlock.css
@@ -31,6 +31,7 @@
 .icon.cue.charity,
 .icon.cue.anti-charity {
     background-position: 0px -30px;
+    transform: translateY(65px);
 }
 
 .icon .protest-sign  {
